--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -14,6 +14,7 @@ body {
     color: rgba(0, 0, 0, 0.792);
 }
 
+/* header element */
 header {
     position: fixed;
     top: 0;
@@ -22,7 +23,25 @@ header {
     z-index: 1000;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    background: transparent;
+    padding: 30px 18%;
+    transition: ease .40s;
 }
+
+.nav-bar li {
+display: inline-block;
+gap: 10px;
+}
+
+
+.logo{
+  font-size: 35px;
+  font-weight: 700;
+  letter-spacing: 1.1px;
+  color: blueviolet;
+}
+
 
 /* Unhide footer */
 footer {
