--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -31,7 +31,7 @@ main {
 
 
 
-
+/* Solo Hub Title */
 .title  {
     padding: 1rem 1rem;
     max-width: none;
@@ -63,6 +63,7 @@ font-family: ;
 .nav-bar a {
     margin-left: 50px;
 }
+
 /* Footer styles */
 footer {
     text-align: center;
@@ -73,4 +74,9 @@ footer {
     background-color: #0b0a0b; 
     color: #ffff;
     width: 100%;
+  }
+
+  button {
+    padding: 2px;
+    margin-top: 100px;
   }
