--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -20,6 +20,7 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
   color: #282d31; 
   overflow: scroll;
   scroll-behavior: smooth;
@@ -36,7 +37,21 @@ main {
 /* h1 heading */
 h1 {
     margin-top: 100px;
+    color: #fff;
+    text-align: center;
 }
+
+
+/* paragraph 1 */
+
+.p1 {
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    margin-top: 20px;
+    text-align: center;
+}
+
 
 /* Solo Hub Title */
 .title  {
@@ -48,15 +63,16 @@ h1 {
     text-align: center;
     font-family: "Pacifico", cursive;
   font-weight: 400;
+  
 
 }
 
 
 .title a {
 text-decoration: none;
-color: rgb(60, 0, 255);
+color: #282d31;
 font-weight: 600;
-font-family: ;
+
 }
 
 
@@ -85,7 +101,9 @@ footer {
     width: 100%;
   }
 
+  /* read more button */
   button {
     padding: 2px;
     margin-top: 100px;
+    margin-left: 10px;
   }
