--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,8 +1,5 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-
-
-
-/* Asterisk wildcard selector to override default styles added by the browser */
 
 * {
   padding: 0;
@@ -10,100 +7,82 @@
   box-sizing: border-box;
 }
 
-
-
-/* General styling */
 body {
   background-color: #fff;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto Flex', sans-serif;
   color: #282d31; 
   overflow: scroll;
   scroll-behavior: smooth;
-
 }
 
-
 main {
- background-color: lightblue; 
-  /* element to take up space and push footer down */ 
+  background-color: lightblue; 
   flex: 1 0 auto;
 }
 
-/* h1 heading */
 h1 {
-    margin-top: 100px;
-    color: #fff;
-    text-align: center;
+  margin-top: 100px;
+  color: #fff;
+  text-align: center;
 }
-
-
-/* paragraph 1 */
 
 .p1 {
-    text-align: center;
-    font-size: 18px;
-    color: #fff;
-    margin-top: 20px;
-    text-align: center;
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+  margin-top: 20px;
 }
 
-
-/* Solo Hub Title */
-.title  {
-    padding: 1rem 1rem;
-    max-width: none;
-    margin-bottom: 1rem;
-    font-size: 2.5rem;
-    text-decoration: none;
-    text-align: center;
-    font-family: "Pacifico", cursive;
+.logo  {
+  padding: 1rem;
+  font-size: 3.5rem;
+  text-align: center;
+  font-family: "Pacifico", cursive;
   font-weight: 400;
-  
-
+  color: #282d31;
+  margin-right: 150px;
 }
 
 
-.title a {
-text-decoration: none;
-color: #282d31;
-font-weight: 600;
-
+.logo:hover {
+    color: rgba(88, 16, 176, 0.386);
 }
-
-
-.nav-bar li {
-    display: inline-block;
-  margin-left: 50px;
+nav ul {
   list-style-type: none;
- 
-
+  text-align: center;
 }
 
-
-.nav-bar a {
-    margin-left: 50px;
+nav ul li {
+  display: inline-block;
+  margin-left: 50px;
+  
 }
 
-/* Footer styles */
+nav ul li a {
+  text-decoration: none;
+  color: #282d31;
+  font-weight: 600;
+  margin-left: 50px;
+}
+
+nav ul li a:hover {
+  color: #4035a9;
+  transition: color 0.4s ease;
+}
+
 footer {
-    text-align: center;
-    padding: 20px 0;
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    background-color: #0b0a0b; 
-    color: #ffff;
-    width: 100%;
-  }
+  text-align: center;
+  padding: 20px 0;
+  background-color: #0b0a0b; 
+  color: #fff;
+  width: 100%;
+}
 
-  /* read more button */
-  button {
-    padding: 2px;
-    margin-top: 100px;
-    margin-left: 10px;
-  }
+button {
+  padding: 2px;
+  margin-top: 50px;
+  margin-left: 10px;
+}
