--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
 }
 
+/* general styling */
 body {
   background-color: #fff;
   display: flex;
@@ -18,21 +19,23 @@ body {
   scroll-behavior: smooth;
 }
 
+
+
 main {
-  background-color: lightblue; 
+  background-color: #fff; 
   flex: 1 0 auto;
 }
 
 h1 {
   margin-top: 100px;
-  color: #fff;
+  color: black;
   text-align: center;
 }
 
 .p1 {
   text-align: center;
   font-size: 18px;
-  color: #fff;
+  color: black;
   margin-top: 20px;
 }
 
