--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,6 +1,12 @@
 
+
+
+/* google font for logo*/
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
+
+
+/* wildcard selector */
 * {
   padding: 0;
   margin: 0;
@@ -20,7 +26,7 @@ body {
 }
 
 
-
+/* main styling*/
 main {
   background-color: #fff; 
   flex: 1 0 auto;
@@ -30,6 +36,7 @@ h1 {
   margin-top: 100px;
   color: black;
   text-align: center;
+  font-style: italic;
 }
 
 .p1 {
@@ -39,6 +46,8 @@ h1 {
   margin-top: 20px;
 }
 
+
+/* Solo Hub Logo */
 .logo  {
   padding: 1rem;
   font-size: 3.5rem;
@@ -53,6 +62,9 @@ h1 {
 .logo:hover {
     color: rgba(88, 16, 176, 0.386);
 }
+
+
+/* Nav Bar */
 nav ul {
   list-style-type: none;
   text-align: center;
@@ -76,6 +88,14 @@ nav ul li a:hover {
   transition: color 0.4s ease;
 }
 
+/* button */
+button {
+    padding: 2px;
+    margin-top: 50px;
+    margin-left: 10px;
+  }
+
+/* footer */
 footer {
   text-align: center;
   padding: 20px 0;
@@ -84,8 +104,4 @@ footer {
   width: 100%;
 }
 
-button {
-  padding: 2px;
-  margin-top: 50px;
-  margin-left: 10px;
-}
+
