--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -21,6 +23,7 @@ nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
+    align-items: center;
 }
 
 /* logo styles */
@@ -29,7 +32,48 @@ nav {
     color: #fff;
     font-family: 'Pacifico', cursive; /* Ensure proper font import */
     text-decoration: none;
-    font-size: 3em;
+    font-size: 2.5em;
+    
 }
 
 
+.nav-bar {
+    flex: 1;
+    text-align: right;
+}
+
+.nav-bar ul li {
+  list-style-type: none; 
+  display: inline-block; 
+  padding: 8px 12px;
+  position: relative;
+}
+
+
+.nav-bar ul li a {
+   color: #fff; 
+   text-decoration: none;
+   font-size: 0.9em;
+   font-family: "Poppins", sans-serif;
+   font-weight: 600;
+   font-style: normal;
+}
+
+.nav-bar ul li a:hover {
+    color: black;
+    transform: ease in 0.4s;
+}
+
+.nav-bar ul li a::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: lightskyblue; /*place holder color */
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-bar ul li a:hover::after {
+ width: 100%;   
+}
