--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,38 @@ nav {
 .nav-bar ul li a:hover::after {
  width: 100%;   
 }
+
+.text-box {
+   width: 90%;
+   color: #fff;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%);
+   text-align: center;
+}
+
+.text-box h1 {
+  font-size: 62px;
+  font-family: "Poppins", sans-serif;
+  font-style: italic;
+}
+
+.text-box p {
+  margin: 10px 0 40px;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+
+}
+
+.hero-button {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
