hover added to hero button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,9 @@ nav {
     position: relative;
     cursor: pointer;
 }
+
+.hero-button:hover {
+   border: 1px solid lightblue;
+   background: lightskyblue;
+   transition: 0.8s;
+}
