--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,3 +118,25 @@ nav {
    background: lightskyblue;
    transition: 0.8s;
 }
+
+
+@media only screen and (min-width: 420px)  and (max-width: 768px) {
+
+
+.text-box h1 {
+   font-size: 20px;
+  }
+  .nav-bar ul li {
+    display: block;
+  }
+  .nav-bar {
+    position: absolute;
+    background: lightblue;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: 0;
+    text-align: left;
+    z-index: 2;
+  }
+}
