background colour for mobile screens changed to black

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* google font import links */
+
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -37,6 +39,7 @@ nav {
 }
 
 
+/* nav bar styling */
 .nav-bar {
     flex: 1;
     text-align: right;
@@ -60,7 +63,7 @@ nav {
 }
 
 .nav-bar ul li a:hover {
-    color: black;
+    color: lightblue;
     transform: ease in 0.4s;
 }
 
@@ -68,7 +71,7 @@ nav {
     content: '';
     width: 0%;
     height: 2px;
-    background: lightskyblue; /*place holder color */
+    background: #fff; /*place holder color */
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -114,9 +117,14 @@ nav {
 }
 
 .hero-button:hover {
-   border: 1px solid lightblue;
-   background: lightskyblue;
+   border: 1px solid lightblue; /*place holder color */
+   background: lightskyblue; /*place holder color */
    transition: 0.8s;
+}
+
+
+nav .fa { /* Hide icon for larger screen */
+    display: none;
 }
 
 
@@ -131,12 +139,20 @@ nav {
   }
   .nav-bar {
     position: absolute;
-    background: lightblue;
+    background: #1D1615; /*place holder color */
     height: 100vh;
     width: 200px;
     top: 0;
     right: 0;
     text-align: left;
     z-index: 2;
+  }
+
+  nav .fa{
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size: 22px;
+
   }
 }
