--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ nav .fa { /* Hide icon for larger screen */
     display: none;
 }
 
-
+/* Media query for mobile phones and large screens*/
 @media only screen and (min-width: 420px)  and (max-width: 768px) {
 
 
