--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,7 @@ nav .fa-solid.fa-xmark {
       height: 100vh;
       width: 200px;
       top: 0;
-      right: 0;
+      right: -200px;
       text-align: left;
       z-index: 2;
     }
@@ -169,6 +169,13 @@ nav .fa-solid.fa-xmark {
       margin: 10px;
       font-size: 22px;
       cursor: pointer;
+    
     }
-  }
 
+    .nav-bar ul {
+     padding: 30px;
+
+}
+
+
+}
