--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ nav .fa-solid.fa-xmark {
       right: -200px;
       text-align: left;
       z-index: 2;
+      transition: 1s;
     }
   
     /* Show menu icon only on mobile screens */
