logo added to header and social media icons added to footer

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,3 +1,11 @@
+/* google font import links */
+
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
+
 /* Wild Card selectoe  */
 * {
     margin: 0;
@@ -11,13 +19,24 @@ body {
   display: flex;
   flex-direction: column;
   color: black;
+  font-family: "Poppins", sans-serif;
 }
  
 
 /*  Header */
 header {
-    background-color: salmon;
+ background-color: #20211A;
+ color: #fff;
     padding: 20px 30px;
+}
+
+/*Logo styles */
+.logo   {
+    font-size: 2em;
+    color: #fff;
+    font-family: 'Pacifico', cursive;
+    text-decoration: none;
+    font-size: 2.5em;
 }
 
 /* Main */
@@ -25,11 +44,40 @@ main {
     flex: 1 0 auto;
     text-align: center;
     margin-top: 60px;
+    
 }
+
+
+/* Social Media Icons */
+#social-networks {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center; /* Center icons horizontally */
+    gap: 15px; /* Add space between the icons */
+}
+
+#social-networks li {
+    display: inline-block; /* Ensure each list item is inline */
+}
+
+#social-networks a {
+    color: white; /* Set icon color to white */
+    font-size: 24px; /* Adjust icon size */
+    text-decoration: none; /* Remove underline */
+}
+
+#social-networks a:hover {
+    color: lightblue; /* Change color on hover */
+}
+
 
 /* Footer */
 footer {
-    background-color: orange;
-    padding: 20px 30px;
+    background-color: #20211A;
+    color: #fff;
+    padding: 20px 0; /* Adjust padding to center the content */
+    position: relative; /* Ensure the absolute positioning works inside the footer */
+    text-align: center; /* Center the content in the footer */
 }
-
