Nav bar added and styled with hover effect

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -39,6 +39,49 @@ header {
     font-size: 2.5em;
 }
 
+
+/* Navbar styling */
+.nav-bar {
+    flex: 1;
+    text-align: right;
+}
+
+.nav-bar ul li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 8px 12px;
+}
+
+.nav-bar ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 0.9em;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+}
+
+.nav-bar ul li a:hover {
+    color: lightblue;
+}
+
+.nav-bar ul li a::after {
+    content: '';
+    width: 0;
+    height: 2px;
+    background: #fff;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-bar ul li a:hover::after {
+    width: 100%;
+}
+
+
+
+
+
 /* Main */
 main {
     flex: 1 0 auto;
