Contact picture created and styled

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -94,6 +94,14 @@ main {
     
 }
 
+  .grid-container {
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
 
 /* Social Media Icons */
 #social-networks {
