--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -22,14 +22,23 @@ body {
   font-family: "Poppins", sans-serif;
 }
  
+img {
+    width: 400px;
+    height: 400px;
+    border-radius: 2px solid #fff;
+
+}
+   
+
 
 /*  Header */
 header {
- background-color: #20211A;
+ background-color: #0e0f0c;
+background-size: contain;
  color: #fff;
  position: fixed;
  width: 100%;
-padding: 3px;
+ margin-bottom: 20px;
 }
 
 /*Logo styles */
@@ -60,6 +69,7 @@ padding: 3px;
 
 .nav-bar ul li a {
     color: #fff;
+    border: pink;
     text-decoration: none;
     font-size: 0.9em;
     font-family: "Poppins", sans-serif;
@@ -94,13 +104,15 @@ main {
     
 }
 
-  .grid-container {
-
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
+h1 {
+    margin-top: 80px;
+    text-align: right;
+    margin-right: 600px;
+    font-style: italic;
+    color: darkblue;
+    opacity: 0.5;
+}
+ 
 
 
 /* Social Media Icons */
