--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -26,10 +26,15 @@ header {
     top: 0;
     width: 100%;
     padding: 10px 20px;
+    z-index: 1000;
+}
+
+/* Navigation */
+nav {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    z-index: 1000;
+    justify-content: space-between; /* Ensure logo is on the left and nav-bar on the right */
+    width: 100%;
 }
 
 /* Logo styles */
@@ -41,17 +46,14 @@ header {
 }
 
 /* Nav bar styling */
-.nav-bar {
-    display: flex;
-    justify-content: flex-end;
-    text-align: right;
-    flex: 1;
-}
 .nav-bar ul {
     display: flex;
     gap: 15px;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
+
 .nav-bar ul li a {
     color: #fff;
     text-decoration: none;
@@ -59,9 +61,11 @@ header {
     font-weight: 600;
     transition: color 0.3s;
 }
+
 .nav-bar ul li a:hover {
     color: lightblue;
 }
+
 .nav-bar ul li a::after {
     content: '';
     width: 0;
@@ -71,6 +75,7 @@ header {
     margin: auto;
     transition: width 0.5s;
 }
+
 .nav-bar ul li a:hover::after {
     width: 100%;
 }
