--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,16 +11,19 @@
     box-sizing: border-box;
 }
 
-/* Header with Background Image */
 .header {
     min-height: 100vh;
+    height: 100vh; /* Ensures it covers the viewport height */
     width: 100%;
+    z-index: 1000;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
         url("https://www.aig.ie/content/aig/emea/ie/en/our-blog/first-hand-guide-to-solo-travelling/_jcr_content/root/responsivegrid/container/container_copy_copy_/articleimage_copy_1995514872.coreimg.jpeg/1714386874843/solo-traveling-1-1440x720.jpeg");
     background-size: cover;
+    background-attachment: fixed;
     background-position: center;
     position: relative;
 }
+
 
 /* Social Media Icons */
 #social-networks {
@@ -76,10 +79,10 @@ nav {
 /* Navbar Styling */
 .nav-bar ul {
     display: flex;
-    gap: 15px;
+    gap: 25px;
     list-style: none;
     padding: 0;
-    margin: 0;
+    
 }
 
 .nav-bar ul li {
@@ -92,7 +95,6 @@ nav {
     font-size:1em;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
-    padding: 8px;
     position: relative;
     transition: color 0.3s;
 }
@@ -104,7 +106,7 @@ nav {
 .nav-bar ul li a::after {
     content: '';
     width: 0;
-    height: 2px;
+    height: 3px;
     background: #ffcb74;
     display: block;
     margin: auto;
@@ -228,6 +230,10 @@ nav .fa-bars, nav .fa-xmark {
         text-align: left;
         z-index: 2;
         transition: 1s;
+    }
+
+    .text-box .headline {
+        font-size: 1.7rem; 
     }
     nav .fa-xmark {
         display: block;
