--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -69,7 +69,7 @@ nav {
 }
 
 .nav-bar ul li a:hover {
-    color: #ffcb74;
+    color: #fff;
 }
 
 
@@ -102,6 +102,7 @@ main {
 /* Container styling */
 .container {
     position: relative;
+    margin: ;
     display: flex;
     flex-direction: column;
     justify-content: center;
