changes to about

--- a/assets/css/destinations.css
+++ b/assets/css/destinations.css
@@ -31,7 +31,7 @@ header {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-/* Navigation */
+* Navigation */
 nav {
     display: flex;
     align-items: center;
@@ -47,9 +47,9 @@ nav {
     text-decoration: none;
 }
 
+
 .nav-bar {
     display: flex;
-
 }
 
 .nav-bar ul {
